fixed out of bounds issue

--- a/project.html
+++ b/project.html
@@ -37,7 +37,7 @@
       This means you have to combine both movement and aim in order to succeed!
       I hope you enjoy learning more about CaveArcherProject and I can't wait for you to experience it for yourself. You can check out the features with photos and gameplay further below</p>
     </p>
-<a target="_blank"  href="https://github.com/z7strpurez7/CaveArcherProject">Check out the <br> Source Code<i class="fab fa-github"></i></a>
+<a target="_blank"  href="https://github.com/z7strpurez7/CaveArcherProject">Check out <br> Source Code<i class="fab fa-github"></i></a>
     
    </section>
 
