--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>Ali Todashev</title>
-    <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/navBar.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/navBar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script defer src="js/app.js"></script>
+ 
 
 </head>
 
@@ -24,24 +26,25 @@
 
 
     <section class="aboutMe">
-        <img src="../resources/Techno.png"  alt="Fancy AI made computer">
-        <article>
+        <img class="hidden" src="../resources/Techno.png"  alt="Fancy AI made computer">
+        <article class="hidden">
     
-            <h1>AT Playground</h1>
-            <p>The goal of this website is to improve my development skills, checkout the pages in the top right corner.
+            <h1>My Sandbox</h1>
+            <p >The goal of this website is to improve my development skills, checkout the pages in the top right corner.
                The practice will be done in certain stages involving different tools/languages:</p>
                <ul>
-                <li>Stage one: Frontend <br>
+                <li><p>Stage one: Frontend <br>
                   Early on there will be created some simple and clean visual content using only HTML and CSS.
-                  In addition the webiste should be somewhat responsive at the end of the stage.
+                </p>
                 </li>
-                <li>Stage two: JavaScript <br>
-                  In this stage i will start focusing on JavaScript and add extras
-                   such as a calculator, transformations, form validations and so on.
+                <li><p>Stage two: JavaScript <br>
+                  In this stage i will start focusing more on JavaScript and add extras such as transformations.</p>
                 </li>
-                <li>Stage three: <br> yet to be decided</li>
+                <li><p>Stage three: Optimizing<br>
+                  In this stage, the website will get reworked, so that smaller devices can use the website.
+                </li></p>
               </ul>
-              <strong>The webite is currently in stage one.</strong>
+              <p><strong>The webite is currently in stage two.</strong></p>
                  <buttons>
            <!--   <a>Download CV</a>
                   <a>Contact</a>  
