--- a/project.html
+++ b/project.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>CaveArcherProject</title>
-    <link rel="stylesheet" href="../css/blog.css">
+    <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  
+    <script defer src="js/app.js"></script>
 </head>
 
 
@@ -22,17 +22,17 @@
 
 
 
-  <section> 
-    <h1>The CaveArcher Project</h1>
+  <section > 
+    <h1 class="hidden">The CaveArcher Project</h1>
     <img id="mainPhoto" src="../resources/Background.png" alt="screenshot of the loadingscreen">
-    <p>
+    <p class="hidden">
       Welcome to the CaveArcher Project page, where you'll find all the information about my exciting 2D platformer game, incluiding gameplay and photos. This project has been a labor of love and I've put my heart and soul into every aspect of it. 
       CaveArcherProject is a one-of-a-kind 2D platformer game built entirely from scratch using C++. I've hand-crafted almost every aspect of the game, with no external game engines involved. 
 
     </p>
 
-    <h3>What sets this game apart from others?</h3>
-    <p>
+    <h3 class="hidden">What sets this game apart from others?</h3>
+    <p class="hidden">
       What sets CaveArcherProject apart is its unique combat system. You'll be armed with a bow that you control with your mouse, making it your main weapon. 
       This means you have to combine both movement and aim in order to succeed!
       I hope you enjoy learning more about CaveArcherProject and I can't wait for you to experience it for yourself. You can check out the features with photos and gameplay further below</p>
@@ -42,31 +42,31 @@
    </section>
 
    <section>
-    <h1>Before we get into the boring details of the game, have a look at some of it!</h1>
-    <h3>Firing animation</h3>
+    <h1 class="hidden">Before we get into the boring details of the game, have a look at some of it!</h1>
+    <h3 class="hidden">Firing animation</h3>
     <img class="screenshot2" src="../resources/Shooting.png" alt="screenshot of the game">
-    <p>Alot of time went in on making the firing animation look smooth and natural.</p>
-    <h3>Arrow flying path</h3>
+    <p class="hidden">Alot of time went in on making the firing animation look smooth and natural.</p>
+    <h3 class="hidden">Arrow flying path</h3>
     <img class="screenshot3" src="../resources/arrowPath.png" alt="screenshot of the game">
-    <p>Arrow firing path. Finally got some use for University math and physics. Check out the demo video below</p>
+    <p class="hidden"Arrow firing path. Finally got some use for University math and physics. Check out the demo video below</p>
    </section>
  
  
   </section>
 
-  <section>
-    <h1>Small demo of the gameplay. Enjoy!</h1>
+  <section >
+    <h1 class="hidden">Small demo of the gameplay. Enjoy!</h1>
     <iframe width="960" height="540" src="https://www.youtube.com/embed/1qNUpzfZa0Y"
      title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
      clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
      
-     <p>Demonstration of the gameplay</p>
+     <p class="hidden">Demonstration of the gameplay</p>
   </section>
 
   <section>
-    <h1>Theres also bossfights!</h1>
+    <h1 class="hidden">Theres also bossfights!</h1>
     <img class="screenshot4" src="../resources/bossfight.png" alt="screenshot of the game">
-    <p>This page is still under development</p>
+    <p class="hidden">This page is still under development</p>
   </section>
 
    <!-- FOOTER -->
