--- a/resume.html
+++ b/resume.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>About me</title>
-    <link rel="stylesheet" href="../css/navBar.css">
-    <link rel="stylesheet" href="../css/resume.css">
+    <link rel="stylesheet" href="css/navBar.css">
+    <link rel="stylesheet" href="css/resume.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script defer src="js/app.js"></script>
 </head>
 
 <body class="resume">
@@ -21,16 +22,16 @@
 
 
     <section>
-      <h1>Ali Todashev</h1>
+      <h1 class="hidden">Ali Todashev</h1>
       <img src="../resources/test_photo.jpg" alt = "Profile picture">
-     <p>As a passionate software developer, I am eager to find a dynamic and challenging work environment where I can grow and cultivate my skills.
+     <p class="hidden">As a passionate software developer, I am eager to find a dynamic and challenging work environment where I can grow and cultivate my skills.
      I have always been driven by my dream of becoming a software engineer, and I believe that finding the right job will help me achieve that goal.  </p>  </p> 
-     <p>In my free time, I enjoy exploring technology, science, sports, training, gaming, and politics, as well as maintaining a healthy lifestyle through physical activity and healthy cooking.
+     <p class="hidden">In my free time, I enjoy exploring technology, science, sports, training, gaming, and politics, as well as maintaining a healthy lifestyle through physical activity and healthy cooking.
       Whether I am at the gym, coding, cooking, or gaming, I am always looking for new opportunities to learn and improve.</p>
     </section>
     <section>
-        <h3>Objective</h3>
-        <p> My strengths lie in object-oriented programming languages such as C++ and JavaScript,
+        <h3  class="hidden">Objective</h3>
+        <p  class="hidden"> My strengths lie in object-oriented programming languages such as C++ and JavaScript,
            and I have created a 2D platformer game using C++ to showcase my abilities. 
            I am also experienced in other development tools and languages, and have taken certifications in CSS,
             JavaScript, and HTML from Codeacademy, and i am currently working on this website to further my skills in web development.
