--- a/project.html
+++ b/project.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CaveArcherProject</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/blog.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script defer src="js/app.js"></script>
