mobile bug test

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
         <nav>
             <a class ="nav-left" href="./index.html"> AT</a>
             <a class ="nav-right" href="./resume.html"> About Me</a>
-            <a class ="nav-right" href="./project.html"> CaveArcherProject</a>
+            <a class ="nav-right" href="./project.html"> Project</a>
             <a class ="nav-right" target="_blank" href="https://www.linkedin.com/in/ali-todashev-b69156207"><i class="fab fa-linkedin" ></i></a>
            <!-- <a class ="nav-right" href="#"><i class="fas fa-bars"></i></i></a> -->
         </nav>
     </header>
-
-
 
     <div class="aboutMe">
         <img class="hidden" src="../resources/Techno.png"  alt="Fancy AI made computer">
@@ -34,10 +32,8 @@
             <p>Have a look around to learn more about me and my projects.</p>
             <p>This websites only purpose is to improve my skills</p>
             <p>Currently working on making the website responsive. Only the main page will be responsive at first</p>
-          
            <!--   <a>Download CV</a>
                   <a>Contact</a>  
-
                 <p>As a recent graduate in software engineering, I am excited to use my skills and knowledge in practical applications.
                  I have a solid background in computer science and am dedicated to creating new and improved solutions.
                  I look forward to continuing to learn and grow as a software engineer,
@@ -47,8 +43,6 @@
         </article>
       
       </div>
-
-
 
     <footer>
         <div>
