--- a/project.html
+++ b/project.html
@@ -9,19 +9,16 @@
     <script defer src="js/app.js"></script>
 </head>
 
-
 <body>
   <header>
     <nav>
       <a class ="nav-left" href="./index.html"> AT</a>
       <a class ="nav-right" href="./resume.html"> About Me</a>
-      <a class ="nav-right" href="./project.html"> CaveArcherProject</a>
+      <a class ="nav-right" href="./project.html"> Projects</a>
       <a class ="nav-right" target="_blank" href="https://www.linkedin.com/in/ali-todashev-b69156207"><i class="fab fa-linkedin" ></i></a>
-  <!-- <a class ="nav-right" href="#"><i class="fas fa-bars"></i></i></a> -->
+
   </nav>
   </header>
-
-
 
   <section > 
     <h1 class="hidden">The CaveArcher Project</h1>
@@ -29,7 +26,6 @@
     <p class="hidden">
       Welcome to the CaveArcher Project page, where you'll find all the information about my exciting 2D platformer game, incluiding gameplay and photos. This project has been a labor of love and I've put my heart and soul into every aspect of it. 
       CaveArcherProject is a one-of-a-kind 2D platformer game built entirely from scratch using C++. I've hand-crafted almost every aspect of the game, with no external game engines involved. 
-
     </p>
 
     <h3 class="hidden">What sets this game apart from others?</h3>
@@ -38,8 +34,7 @@
       This means you have to combine both movement and aim in order to succeed!
       I hope you enjoy learning more about CaveArcherProject and I can't wait for you to experience it for yourself. You can check out the features with photos and gameplay further below</p>
     </p>
-<a target="_blank"  href="https://github.com/z7strpurez7/CaveArcherProject">Check out <br> Source Code<i class="fab fa-github"></i></a>
-    
+  <a target="_blank"  href="https://github.com/z7strpurez7/CaveArcherProject">Check out <br> Source Code<i class="fab fa-github"></i></a>
    </section>
 
    <section>
@@ -49,7 +44,7 @@
     <p class="hidden">Alot of time went in on making the firing animation look smooth and natural.</p>
     <h3 class="hidden">Arrow flying path</h3>
     <img class="screenshot3" src="../resources/arrowPath.png" alt="screenshot of the game">
-    <p class="hidden"Arrow firing path. Finally got some use for University math and physics. Check out the demo video below</p>
+    <p class="hidden"> Arrow firing path. Finally got some use for University math and physics. Check out the demo video below</p>
    </section>
  
  
@@ -69,6 +64,8 @@
     <img class="screenshot4" src="../resources/bossfight.png" alt="screenshot of the game">
     <p class="hidden">This page is still under development</p>
   </section>
+
+
 
    <!-- FOOTER -->
    <footer>
