--- a/resume.html
+++ b/resume.html
@@ -15,9 +15,10 @@
       <nav>
         <a class ="nav-left" href="./index.html"> AT</a>
         <a class ="nav-right" href="./resume.html"> About Me</a>
-        <a class ="nav-right" href="./project.html"> CaveArcherProject</a>
+        <a class ="nav-right" href="./project.html"> Project</a>
         <a class ="nav-right" target="_blank" href="https://www.linkedin.com/in/ali-todashev-b69156207"><i class="fab fa-linkedin" ></i></a>
-     <!-- <a class ="nav-right" href="#"><i class="fas fa-bars"></i></i></a> -->
+
+
     </nav>
     </header>
 
@@ -29,8 +30,7 @@
      I have always been driven by my dream of becoming a software engineer, and I believe that finding the right job will help me achieve that goal.  </p>  </p> 
      <p class="hidden">In my free time, I enjoy exploring technology, science, sports, training, gaming, and politics, as well as maintaining a healthy lifestyle through physical activity and healthy cooking.
       Whether I am at the gym, coding, cooking, or gaming, I am always looking for new opportunities to learn and improve.</p>
-    </section>
-    <section>
+    
         <h3  class="hidden">Objective</h3>
         <p  class="hidden"> My strengths lie in object-oriented programming languages such as C++ and JavaScript,
            and I have created a 2D platformer game using C++ to showcase my abilities. 
@@ -40,6 +40,7 @@
     </section>
 
    
+
 
     <footer>
         <div>
